<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.trust.loginregisterlibrary.ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <EditText
            style="@style/UserInfoLinearEd"
            android:maxLength="11"
            android:id="@+id/ed_login_phone"
            android:inputType="phone" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            style="@style/UserInfoLinearEd"
            android:maxLength="11"
            android:inputType="text"
            android:id="@+id/ed_login_pwd" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/btn_login_forget_pwd"
        android:layout_marginTop="20dp"
        android:text="@string/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/btn_login_registered"
        android:layout_marginTop="50dp"
        android:text="@string/registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
